Fix profile picture's position when sidebar is collapsed

--- a/resources/sass/rtl.scss
+++ b/resources/sass/rtl.scss
@@ -511,8 +511,7 @@ html body {
 My Edits
 *******************/
 .user-pro a img {
-    margin-right: unset;
-    margin-left: 10px;
+    margin-right: -7px;
 }
 .navbar-expand-md .navbar-nav .dropdown-menu-right {
     text-align: right;
